--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
+    "react-icons": "^5.4.0",
     "zod": "^3.24.1"
   },
   "eslintConfig": {
